fix(divider): add display flex for visibility

--- a/src/app/components/ui/display/divider/divider.component.scss
+++ b/src/app/components/ui/display/divider/divider.component.scss
@@ -3,11 +3,14 @@
 // ============================================
 
 :host {
-  display: flex;
-  align-items: center;
+  display: block;
+  width: 100%;
 }
 
 .divider {
+  display: flex;
+  align-items: center;
+
   // ==========================================
   // ORIENTATION
   // ==========================================
